<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!--textOff未选中，textOn是选中-->
        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggleButton1_no"
            android:textOn="@string/toggleButton1_yes" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggleButton2_no"
            android:textOn="@string/toggleButton2_yes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on3"
            android:text="@string/show_three_tab" />



        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on5"
            android:text="@string/show_five_tab" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="on12"
            android:text="@string/show_twelve_tab" />
    </LinearLayout>

    <com.shizhefei.view.indicator.ScrollIndicatorView
        android:id="@+id/moretab_indicator"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:fillViewport="false" />

    <android.support.v4.view.ViewPager
        android:id="@+id/moretab_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>