<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    >

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="420dp"

         >

    <android.support.v4.view.ViewPager
        android:id="@+id/banner_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.shizhefei.view.indicator.FixedIndicatorView
        android:id="@+id/banner_indicator"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="end|bottom" />
     </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/change_to_one"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/change_to_two"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/change_to_four"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>
